--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <p>قابل استفاده در برنامه های Fair, v2box ,foxray xray vpn, V2rayNG</p>
 <p>✅قابلیت اتصال ده کشور:</p>
 <p>آلمان، هلند، فنلاند، ترکیه، لهستان، آمریکا، نروژ، روسیه، اوکراین.</p>
-<p>پیام جهت سفارش در <strong>تلگرام: <a href="https://t.me/v2makers_bot" rel="follow" target="_blank">@tanhanet</a></strong></p>
+<p>پیام جهت سفارش در <strong>تلگرام: <a href="https://t.me/v2makers_bot" rel="follow" target="_blank">@v2makers_bot</a></strong></p>
 <h4>قابل نمایش حجم و زمان در برنامه</h4>
 <p>✅ یک ماهه سرویس حجمی تک کاربره ۱۰۹ تومان (حجم استفاده ۵۰ گیگ)</p>
 <p>✅ یکماهه سرویس حجمی  دو کاربره ۱۵۹ تومان (حجم استفاده 80 گیگ)</p>
